--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,12 +15,17 @@ ru:
   add_sauna: "добавить банный комплекс"
   add_sauna_item: "добавить сауну"
   edit: "редактировать"
-  delete: "удалить"
-  sign_out: "Выйти"
-  sign_in: "Войти"
+  delete: "удалить"  
+  sign_out: "выход"
+  sign_in: "вход"
+  admin_section: "Панель администратора"
+  comments_section: "Комментарии"
   users_list: "Список пользователей"
   saunas_list: "Список саун"
   search_results: "Результаты поиска"  
+  main_parameters: "Основные параметры:"
+  additional_parameters: "Дополнительные опции:"
+  place_parameters: "Местоположение:"
   sauna: "Сауна"
   name: "Название"
   phone_number: "Телефон"
@@ -30,15 +35,18 @@ ru:
   address: "Адрес"
   city_id: "Город"  
   district: "Район"
+  district_colon: "район:"
   district_id: "Район"
   street: "Улица"
   building: "Дом"
   price: "Цена"
+  price_colon: "цена:"
   price_from: "Цена от"
   price_to: "Цена до"
   search: "Поиск"  
   save: "Сохранить"  
   sauna_type_id: "Тип бани"
+  sauna_type_colon: "тип:"
   has_kitchen: "Кухня"
   has_restroom: "Комната отдыха"
   has_billiards: "Биллиард"
@@ -46,6 +54,7 @@ ru:
   has_video: "Телевизор"
   has_bar: "Бар"  
   capacity: "Вместимость"
+  capacity_colon: "вместимость:"
   min_price: "Минимальная цена (за час)"
   min_duration: "Минимальное время аренды"
   go_to_ext_search: "Перейти к расширенному поиску"
@@ -66,6 +75,7 @@ ru:
   confirm_delete_user: "Вы действительно хотите удалить пользователя и все его сауны?"
   edit_sauna: "Редактировать банный комплекс"
   user_name: "Имя пользователя"
+  name: "Имя"
   email: "Е-mail"
   password: "Пароль"
   password_confirmation: "Подтверждение"
