--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,6 +18,9 @@ ru:
   delete: "удалить"  
   sign_out: "выход"
   sign_in: "вход"
+  user_type: "Тип пользователя"
+  admin: "Администратор"
+  owner: "Владелец"
   admin_section: "Панель администратора"
   comments_section: "Комментарии"
   users_list: "Список пользователей"
@@ -44,7 +47,10 @@ ru:
   price_from: "Цена от"
   price_to: "Цена до"
   search: "Поиск"  
-  save: "Сохранить"  
+  save: "Сохранить" 
+  add: "Добавить" 
+  edit: "Редактировать" 
+  delete: "Удалить"   
   sauna_type_id: "Тип бани"
   sauna_type_colon: "тип:"
   has_kitchen: "Кухня"
@@ -55,7 +61,7 @@ ru:
   has_bar: "Бар"  
   capacity: "Вместимость"
   capacity_colon: "вместимость:"
-  min_price: "Минимальная цена (за час)"
+  min_price: "Цена (за час)"
   min_duration: "Минимальное время аренды"
   go_to_ext_search: "Перейти к расширенному поиску"
   create_new_sauna: "Создать новый банный комплекс"
