improve javascript and mobile version

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,6 +5,7 @@ ru:
   hello_world: "Привет"
   mobile_version: "Мобильная версия"
   full_version: "Полная версия"
+  title: "Поиск саун в Ижевске"
   home: "Главная"
   about: "О проекте"
   contact: "Контакты"
