--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,8 +1,7 @@
 # Sample localization file for English. Add more files in this directory for other locales.
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
-ru:
-  hello_world: "Привет"
+ru:  
   mobile_version: "Мобильная версия"
   full_version: "Полная версия"
   title: "Поиск саун в Ижевске"
@@ -20,10 +19,12 @@ ru:
   sign_out: "выход"
   sign_in: "вход"
   user_type: "Тип пользователя"
+  super_admin: "Главный администратор"
   admin: "Администратор"
   owner: "Владелец"
   admin_section: "Панель администратора"
   comments_section: "Комментарии"
+  sauna_items_section: "Сауны и бани"
   users_list: "Список пользователей"
   saunas_list: "Список саун"
   search_results: "Результаты поиска"  
@@ -37,10 +38,9 @@ ru:
   description: "Описание"
   photo: "Фото"
   address: "Адрес"
-  city_id: "Город"  
+  city: "Город"  
   district: "Район"
   district_colon: "район:"
-  district_id: "Район"
   street: "Улица"
   building: "Дом"
   price: "Цена"
@@ -52,7 +52,8 @@ ru:
   add: "Добавить" 
   edit: "Редактировать" 
   delete: "Удалить"   
-  sauna_type_id: "Тип бани"
+  actions: "Действия"  
+  sauna_type: "Тип бани"
   sauna_type_colon: "тип:"
   has_kitchen: "Кухня"
   has_restroom: "Комната отдыха"
@@ -68,17 +69,22 @@ ru:
   create_new_sauna: "Создать новый банный комплекс"
   sauna_created: "Банный комплекс создан"
   sauna_updated: "Банный комплекс отредактирован"  
+  sauna_destroyed: "Банный комплекс удален" 
   confirm_delete_sauna: "Вы действительно хотите удалить банный комплекс?"  
   create_new_sauna_item: "Создать новую сауну"
   edit_sauna_item: "Редактировать сауну"
   sauna_item_created: "Сауна создана"
   sauna_item_updated: "Сауна отредактирована"
   confirm_delete_sauna_item: "Вы действительно хотите удалить сауну?"  
+  confirm_delete_sauna_comment: "Вы действительно хотите комментарий?" 
+  confirm_delete_photo_comment: "Вы действительно хотите фото?"
   create_new_user: "Создать нового пользователя"
   edit_user: "Редактировать пользователя"
   profile_updated: "Профиль обновлен"
   user_destroyed: "Пользователен удален"
   user_created: "Пользователь создан"
+  sauna_item_destroyed: "Сауна удалена"
+  sauna_comment_destroyed: "Комментарий удален"
   confirm_delete_user: "Вы действительно хотите удалить пользователя и все его сауны?"
   edit_sauna: "Редактировать банный комплекс"
   user_name: "Имя пользователя"
@@ -95,6 +101,7 @@ ru:
   sauna_items_has_video_eq: "Телевизор"
   sauna_items_has_bar_eq: "Бар"
   address_district_id_eq: "Район" 
+  access_denied: "У вас недостаточно прав для получения доступа к этой области"
   will_paginate:
     previous_label: "<"
     next_label: ">"
