new mobile version for simple phones

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,7 +2,10 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 ru:  
+  search_form: "Форма поиска"
+  search_results: "Результаты поиска"
   mobile_version: "Мобильная версия"
+  smartfon_version: "Версия для смартфонов"
   full_version: "Полная версия"
   title: "Поиск саун в Ижевске"
   home: "Главная"
@@ -58,10 +61,13 @@ ru:
   has_kitchen: "Кухня"
   has_restroom: "Комната отдыха"
   has_billiards: "Биллиард"
-  has_audio: "Аудиосистема"
+  has_audio: "Аудиосистема"  
   has_video: "Телевизор"
-  has_bar: "Бар"  
+  has_bar: "Бар"    
   capacity: "Вместимость"
+  capacity_from: "Размер от"
+  v_rub: "(руб./час)"
+  v_chel: "(чел.)"
   capacity_colon: "вместимость:"
   min_price: "Цена (за час)"
   min_duration: "Минимальное время аренды"
@@ -98,6 +104,7 @@ ru:
   sauna_items_has_restroom_eq: "Комната отдыха"  
   sauna_items_has_billiards_eq: "Биллиард"
   sauna_items_has_audio_eq: "Аудиосистема"
+  sauna_items_has_audio_eq_short: "Музыка"
   sauna_items_has_video_eq: "Телевизор"
   sauna_items_has_bar_eq: "Бар"
   address_district_id_eq: "Район" 
