--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -60,7 +60,7 @@ ru:
   sauna_type_colon: "тип:"
   has_kitchen: "Кухня"
   has_restroom: "Комната отдыха"
-  has_billiards: "Биллиард"
+  has_billiards: "Бильярд"
   has_audio: "Аудиосистема"  
   has_video: "Телевизор"
   has_bar: "Бар"    
