--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -63,7 +63,10 @@ ru:
   has_billiards: "Бильярд"
   has_audio: "Аудиосистема"  
   has_video: "Телевизор"
-  has_bar: "Бар"    
+  has_bar: "Бар"   
+  has_pool: "Бассейн"  
+  has_mangal: "Мангал"
+  has_veniki: "Веники" 
   capacity: "Вместимость"
   capacity_from: "Размер от"
   v_rub: "(руб./час)"
