--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -110,6 +110,9 @@ ru:
   sauna_items_has_audio_eq_short: "Музыка"
   sauna_items_has_video_eq: "Телевизор"
   sauna_items_has_bar_eq: "Бар"
+  sauna_items_has_pool_eq: "Бассейн"
+  sauna_items_has_mangal_eq: "Мангал"
+  sauna_items_has_veniki_eq: "Веники"
   address_district_id_eq: "Район" 
   access_denied: "У вас недостаточно прав для получения доступа к этой области"
   must_be_integer: "Значение должно быть целым числом"
