--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -105,7 +105,7 @@ ru:
   sauna_comment_created: "Сообщение создано"
   sauna_items_has_kitchen_eq: "Кухня"
   sauna_items_has_restroom_eq: "Комната отдыха"  
-  sauna_items_has_billiards_eq: "Биллиард"
+  sauna_items_has_billiards_eq: "Бильярд"
   sauna_items_has_audio_eq: "Аудиосистема"
   sauna_items_has_audio_eq_short: "Музыка"
   sauna_items_has_video_eq: "Телевизор"
