booking - initial commit

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,6 +15,10 @@ ru:
   to: "до"
   yes: "Да"
   no: "Нет"
+  book: "Забронировать"
+  next: "Далее"
+  go_to_payment: "Перейти к оплате"
+  pay: "Оплатить"
   add_sauna: "добавить банный комплекс"
   add_sauna_item: "добавить сауну"
   edit: "редактировать"
@@ -36,6 +40,7 @@ ru:
   additional_parameters: "Дополнительные опции:"
   place_parameters: "Местоположение:"
   sauna: "Сауна"
+  fio: "ФИО"
   name: "Название"
   alias: "Псевдоним"
   phone_number: "Телефон"
