--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,7 +24,7 @@ ru:
   book: "Забронировать"
   booking: "Бронирование"
   next: "Далее"
-  go_to_payment: "Перейти к оплате"
+  go_to_payment: "К оплате"
   pay: "Оплатить"
   add_sauna: "добавить банный комплекс"
   add_sauna_item: "добавить сауну"
@@ -52,6 +52,8 @@ ru:
   fio: "ФИО"
   name: "Название"
   alias: "Псевдоним"
+  status: "Статус"
+  no_payment: "Не оплачено"
   phone_number: "Телефон"
   short_phone_number: "тел."
   description: "Описание"
@@ -85,6 +87,7 @@ ru:
   has_mangal: "Мангал"
   has_veniki: "Веники" 
   has_photo: "только с фото" 
+  has_payment: "только оплаченные" 
   capacity: "Вместимость"
   capacity_from: "Размер от"
   v_rub: "(руб./час)"
@@ -92,6 +95,8 @@ ru:
   capacity_colon: "вместимость:"
   min_price: "Цена (за час)"
   min_duration: "Минимальное время аренды"
+  date: "Дата"
+  time: "Время"
   go_to_ext_search: "Перейти к расширенному поиску"
   create_new_sauna: "Создать новый банный комплекс"
   create_new_sauna_photos: "Загрузить фотографии сауны"
