--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -105,7 +105,8 @@ ru:
   create_new_sauna: "Создать новый банный комплекс"
   create_new_sauna_photos: "Загрузить фотографии сауны"
   payment_not_created: "Не удалось обработать платеж, попробуйте повторить операцию позже"
-  payment_created: "Платеж успешно обработан"
+  payment_created: "Платеж успешно обработан"  
+  intermal_error: "Произошла ошибка приложения. Мы постараемся исправить её как можно быстрее."
   sauna_created: "Банный комплекс создан"
   sauna_updated: "Банный комплекс отредактирован"  
   sauna_destroyed: "Банный комплекс удален" 
