booking bug fix

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -28,6 +28,7 @@ ru:
   book: "Забронировать"
   booking: "Бронирование"
   payment: "Платеж"
+  request: "Заявка"
   has_online_booking: "есть онлайн-бронирование"
   next: "Далее"
   go_to_payment: "К оплате"
@@ -106,32 +107,35 @@ ru:
   min_duration: "Минимальное время аренды"
   date: "Дата"
   time: "Время"
-  go_to_ext_search: "Перейти к расширенному поиску"
-  create_new_sauna: "Создать новый банный комплекс"
-  create_new_sauna_photos: "Загрузить фотографии сауны"
   payment_not_created: "Не удалось обработать платеж, попробуйте повторить операцию позже"
   payment_created: "Платеж успешно обработан"  
   intermal_error: "Произошла ошибка приложения. Мы постараемся исправить её как можно быстрее."
-  sauna_created: "Банный комплекс создан"
-  sauna_updated: "Банный комплекс отредактирован"  
-  sauna_destroyed: "Банный комплекс удален" 
-  confirm_delete_sauna: "Вы действительно хотите удалить банный комплекс?"  
-  create_new_sauna_item: "Создать новую сауну"
-  edit_sauna_item: "Редактировать сауну"
-  sauna_item_created: "Сауна создана"
-  sauna_item_updated: "Сауна отредактирована"
-  confirm_delete_sauna_item: "Вы действительно хотите удалить сауну?"  
-  confirm_delete_sauna_comment: "Вы действительно хотите комментарий?" 
-  confirm_delete_photo_comment: "Вы действительно хотите фото?"
+  go_to_ext_search: "Перейти к расширенному поиску"
   create_new_user: "Создать нового пользователя"
-  edit_user: "Редактировать пользователя"
-  profile_updated: "Профиль обновлен"
-  user_destroyed: "Пользователен удален"
+  create_new_sauna: "Создать новый банный комплекс"
+  create_new_sauna_item: "Создать новую сауну"
+  create_new_sauna_photos: "Загрузить фотографии сауны"  
+  edit_user: "Редактировать пользователя"  
+  edit_sauna: "Редактировать банный комплекс"
+  edit_sauna_photo: "Редактировать фотографию"  
   user_created: "Пользователь создан"
+  sauna_created: "Банный комплекс создан"
+  sauna_item_created: "Сауна создана"
+  sauna_photo_created: "Фотографии загружены"  
+  profile_updated: "Профиль обновлен"
+  sauna_updated: "Банный комплекс отредактирован"     
+  sauna_item_updated: "Сауна отредактирована"
+  sauna_photo_updated: "Фотография отредактирована"  
+  confirm_delete_user: "Вы действительно хотите удалить пользователя и все его сауны?"
+  confirm_delete_sauna: "Вы действительно хотите удалить банный комплекс?"  
+  confirm_delete_sauna_item: "Вы действительно хотите удалить сауну?"  
+  confirm_delete_sauna_comment: "Вы действительно хотите удалить комментарий?" 
+  confirm_delete_photo_comment: "Вы действительно хотите удалить фото?"  
+  user_destroyed: "Пользователен удален"
+  sauna_destroyed: "Банный комплекс удален"  
   sauna_item_destroyed: "Сауна удалена"
   sauna_comment_destroyed: "Комментарий удален"
-  confirm_delete_user: "Вы действительно хотите удалить пользователя и все его сауны?"
-  edit_sauna: "Редактировать банный комплекс"
+  sauna_photo_destroyed: "Фотография удалена"
   user_name: "Имя пользователя"
   name: "Имя"
   email: "Е-mail"
