--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,6 +27,7 @@ ru:
   close: "Закрыть"
   book: "Забронировать"
   booking: "Бронирование"
+  booking_explanation: "Если вы отметите эту опцию, то для данной сауны будет доступно онлайн-бронирование"
   payment: "Платеж"
   request: "Заявка"
   has_online_booking: "есть онлайн-бронирование"
@@ -59,6 +60,7 @@ ru:
   fio: "ФИО"
   name: "Название"
   alias: "Псевдоним"
+  alias_explanation: "Задайте имя вашей сауны латинскими буквами, например, sauna-aksion, тогда адрес страницы с вашей сауной будет выглядеть: <br/> http://go-to-sauna.ru/sauna-aksion"
   status: "Статус"
   amount: "Сумма"
   yes_payment: "Оплачено"
