bug fix for user account

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,7 +27,7 @@ ru:
   close: "Закрыть"
   book: "Забронировать"
   booking: "Бронирование"
-  booking_explanation: "Если вы отметите эту опцию, то для данной сауны будет доступно онлайн-бронирование"
+  booking_explanation: "Если вы отметите эту опцию, то для данной сауны будет доступно онлайн-бронирование."
   payment: "Платеж"
   request: "Заявка"
   has_online_booking: "есть онлайн-бронирование"
@@ -56,11 +56,13 @@ ru:
   main_parameters: "Основные параметры:"
   additional_parameters: "Дополнительные опции:"
   place_parameters: "Местоположение:"
+  wmr_purse: "WMR кошелёк"
+  wmr_purse_explanation: "На этот WMR кошелёк будут перечисляться деньги от онлайн-бронирования."
   sauna: "Сауна"
   fio: "ФИО"
   name: "Название"
   alias: "Псевдоним"
-  alias_explanation: "Задайте имя вашей сауны латинскими буквами, например, sauna-aksion, тогда адрес страницы с вашей сауной будет выглядеть: <br/> http://go-to-sauna.ru/sauna-aksion"
+  alias_explanation: "Задайте имя вашей сауны латинскими буквами, например, moya-sauna, тогда адрес страницы с вашей сауной будет выглядеть: <br/>www.go-to-sauna.ru/moya-sauna"
   status: "Статус"
   amount: "Сумма"
   yes_payment: "Оплачено"
@@ -119,6 +121,7 @@ ru:
   payment_created: "Платеж успешно обработан"  
   intermal_error: "Произошла ошибка приложения. Мы постараемся исправить её как можно быстрее."
   please_sign_in: "Вы должны авторизоваться для того, чтобы получить доступ к этому разделу."
+  wmr_is_required: "Вы должны указать WMR кошелек в профиле пользователя прежде, чем подключать онлайн-бронирование сауны"
   go_to_ext_search: "Перейти к расширенному поиску"
   create_new_user: "Создать нового пользователя"
   create_new_sauna: "Создать новый банный комплекс"
@@ -149,6 +152,7 @@ ru:
   user_name: "Имя пользователя"
   name: "Имя"
   email: "Е-mail"
+  email_explanation: "На этот адрес вам будет выслан пароль в случае его утери."
   password: "Пароль"
   password_confirmation: "Подтверждение"
   invalid_email_or_password: "Неверный email или пароль"
@@ -178,6 +182,7 @@ ru:
   payment_created_short: "Платеж успешно создан"
   payment_created_webmoney: "Создан платеж в системе WebMoney. Номер транзакции: "
   payment_description: "Предоплата за бронирование сауны"
+  help_link: "что это?"
   will_paginate:
     previous_label: "<"
     next_label: ">"
