--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -118,6 +118,7 @@ ru:
   min_duration: "Минимальное время аренды"
   date: "Дата"
   time: "Время"
+  show_on_map: "показать на карте"
   payment_not_created: "Не удалось обработать платеж, попробуйте повторить операцию позже"
   payment_created: "Платеж успешно обработан"  
   intermal_error: "Произошла ошибка приложения. Мы постараемся исправить её как можно быстрее."
