--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -36,6 +36,7 @@ ru:
   pay: "Оплатить"
   add_sauna: "добавить банный комплекс"
   add_sauna_item: "добавить сауну"
+  add_advertisement: "Добавить объявление"
   edit: "редактировать"
   delete: "удалить"  
   sign_out: "выход"
@@ -77,6 +78,9 @@ ru:
   short_phone_number: "тел."
   description: "Описание"
   photo: "Фото"
+  advertisement: "Рекламное объявление"
+  advertisement_company_name: "Организация"
+  advertisement_created: "Рекламное объявление создано"
   address: "Адрес"
   city: "Город"  
   district: "Район"
