--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -145,16 +145,19 @@ ru:
   sauna_updated: "Банный комплекс отредактирован"     
   sauna_item_updated: "Сауна отредактирована"
   sauna_photo_updated: "Фотография отредактирована"  
+  advertisement_updated: "Объявление обновлено"
   confirm_delete_user: "Вы действительно хотите удалить пользователя и все его сауны?"
   confirm_delete_sauna: "Вы действительно хотите удалить банный комплекс?"  
   confirm_delete_sauna_item: "Вы действительно хотите удалить сауну?"  
   confirm_delete_sauna_comment: "Вы действительно хотите удалить комментарий?" 
   confirm_delete_photo_comment: "Вы действительно хотите удалить фото?"  
+  confirm_delete_advertisement: "Вы действительно хотите удалить объявление?"  
   user_destroyed: "Пользователен удален"
   sauna_destroyed: "Банный комплекс удален"  
   sauna_item_destroyed: "Сауна удалена"
   sauna_comment_destroyed: "Комментарий удален"
   sauna_photo_destroyed: "Фотография удалена"
+  advertisement_destroyed: "Объявление удалено"
   user_name: "Имя пользователя"
   name: "Имя"
   email: "Е-mail"
