--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -220,7 +220,29 @@ ru:
   sterlitamaka: "Стерлитамака"
   permi: "Перми"
   yoli: "Йошкар-Олы"
-  ufi: "Уфы"  
+  ufi: "Уфы" 
+  saun: "саун"  
+  banya: "баня" 
+  banei: "баней" 
+  coupon_url_created: "Купонный сайт создан"
+  coupon_url_updated: "Купоный сайт отредактирован"
+  coupon_url_destroyed: "Купонный сайт удален"  
+  confirm_delete_coupon_url: "Вы действительно хотите удалить купонный сайт?"
+  add_coupon_url: "Добавить купонный сайт"
+  coupon_url: "Купонный сайт"
+  coupon_url_name: "Название сайта"
+  coupon_url_site_url: "Ссылка на раздел"
+  coupon_url_partner_url: "Партнерская ссылка"
+  coupon_deal_created: "Акция создана"
+  coupon_deal_updated: "Акция отредактирована"
+  coupon_deal_destroyed: "Акция удалена"  
+  confirm_delete_coupon_deal: "Вы действительно хотите удалить акцию?"  
+  add_coupon_deal: "Добавить акцию"
+  coupon_deal: "Акция"
+  coupon_deal_deal_url: "Ссылка на акцию"
+  coupon_deal_image_url: "Ссылка на картинку"
+  coupon_deal_price_old: "Старая цена"
+  coupon_deal_price_new: "Новая цена"
   simple_captcha:
     label: "Введите текст с картинки"
   will_paginate:
