--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -242,7 +242,18 @@ ru:
   coupon_deal_deal_url: "Ссылка на акцию"
   coupon_deal_image_url: "Ссылка на картинку"
   coupon_deal_price_old: "Старая цена"
-  coupon_deal_price_new: "Новая цена"
+  coupon_deal_price_new: "Новая цена"  
+  city_created: "Город создан"
+  city_updated: "Город отредактирован"
+  city_destroyed: "Город удален"  
+  confirm_delete_city: "Вы действительно хотите удалить город?"
+  add_city: "Добавить город"
+  coupon_url: "Купонный сайт"
+  city_name: "Название (им. падеж)"
+  city_name2: "Название (род. падеж)"
+  city_name3: "Название (предл. падеж)"
+  city_path: "Ссылка"
+  city_page_content: "Описание"
   simple_captcha:
     label: "Введите текст с картинки"
   will_paginate:
